[gd_scene load_steps=7 format=2]

[ext_resource path="res://scene/ControllableEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Ghost.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 14.5, 15 )

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "in_range"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0, 10.0, 0.0 ]
}

[node name="Ghost" groups=["ghost"] instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
in_motion = false
speed = 24000.0

[node name="CollisionShape2D" parent="." index="0"]
position = Vector2( -0.5, 0 )
shape = SubResource( 4 )

[node name="Sprite" parent="." index="1"]
modulate = Color( 0.639216, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )

[node name="PlayerDetection" type="Area2D" parent="." index="2"]
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
autoplay = "RESET"
anims/RESET = SubResource( 2 )
anims/in_range = SubResource( 3 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
